--- a/python/package.json
+++ b/python/package.json
@@ -517,7 +517,9 @@
     "phemex.com",
     "Phemex",
     "huobi.co.jp",
-    "Huobi Japan"
+    "Huobi Japan",
+    "max.maicoin.com",
+    "Max"
   ],
   "collective": {
     "type": "opencollective",
