--- a/package.json
+++ b/package.json
@@ -524,7 +524,9 @@
     "Bitpanda",
     "Bitpanda Pro",
     "xena.exchange",
-    "Xena Exchange"
+    "Xena Exchange",
+    "max.maicoin.com",
+    "Max"
   ],
   "collective": {
     "type": "opencollective",
